[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/mingliutsmall.tres" type="DynamicFont" id=2]
[ext_resource path="res://MOD_CONTENT/CruS Mod Base/assets/new_styleboxtexture.tres" type="StyleBox" id=3]
[ext_resource path="res://MOD_CONTENT/CruS Mod Base/scripts/debug_menu.gd" type="Script" id=4]
[ext_resource path="res://MOD_CONTENT/CruS Mod Base/assets/menu_theme_menubtn.tres" type="Theme" id=5]

[sub_resource type="StreamTexture" id=1]
flags = 2
load_path = "res://.import/AN94.png-04cf7128bc987bc71be358ea11b078d8.stex"

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.815686, 0.0862745, 1 )
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0, 1, 0.101961, 1 )

[node name="Debug" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_styles/bg = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 298.0
margin_bottom = 622.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_right = 290.0
margin_bottom = 619.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 285.0
margin_bottom = 26.0
text = "Noclip"

[node name="Noclip" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 285.0
margin_bottom = 68.0
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Noclip"]
margin_right = 285.0
margin_bottom = 32.0

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/Noclip/HBoxContainer"]
margin_right = 64.0
margin_bottom = 32.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 68.0
margin_right = 256.0
margin_bottom = 94.0
text = "Show reticle"

[node name="Show_Reticle" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 68.0
margin_right = 256.0
margin_bottom = 110.0
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Show_Reticle"]
margin_right = 256.0
margin_bottom = 32.0

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/Show_Reticle/HBoxContainer"]
margin_right = 64.0
margin_bottom = 32.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0

[node name="Weapon_Select" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 285.0
margin_bottom = 251.0
custom_constants/margin_bottom = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Weapon_Select"]
margin_right = 285.0
margin_bottom = 173.0

[node name="Weapon1" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3"]
margin_right = 128.0
margin_bottom = 173.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3/Weapon1"]
margin_right = 128.0
margin_bottom = 26.0
text = "Weapon 1"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3/Weapon1"]
margin_top = 26.0
margin_right = 128.0
margin_bottom = 154.0
texture = SubResource( 1 )

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3/Weapon1"]
margin_top = 154.0
margin_right = 128.0
margin_bottom = 173.0
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
clip_text = true

[node name="Weapon2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3"]
margin_left = 128.0
margin_right = 256.0
margin_bottom = 173.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3/Weapon2"]
margin_right = 128.0
margin_bottom = 26.0
text = "Weapon 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3/Weapon2"]
margin_top = 26.0
margin_right = 128.0
margin_bottom = 154.0
texture = SubResource( 1 )

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3/Weapon2"]
margin_top = 154.0
margin_right = 128.0
margin_bottom = 173.0
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
clip_text = true

[node name="Toggle_Implants_Menu" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 285.0
margin_bottom = 287.0
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/Toggle_Implants_Menu"]
margin_right = 285.0
margin_bottom = 26.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "Select implants"

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 287.0
margin_right = 285.0
margin_bottom = 313.0
text = "Border"

[node name="Player_Border" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 313.0
margin_right = 285.0
margin_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_bottom = 5

[node name="Border_Menu" type="OptionButton" parent="MarginContainer/VBoxContainer/Player_Border"]
margin_right = 285.0
margin_bottom = 19.0
focus_mode = 0
theme = ExtResource( 5 )
enabled_focus_mode = 0
text = "POWER IN MISERY"
items = [ "POWER IN MISERY", null, false, 0, null, "FLESH AUTOMATON", null, false, 1, null, "DIVINE LINK", null, false, 2, null, "HOPE ERADICATED", null, false, 3, null ]
selected = 0

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 337.0
margin_right = 285.0
margin_bottom = 363.0
text = "Soul emulation"

[node name="Toggle_Death" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 363.0
margin_right = 285.0
margin_bottom = 405.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Toggle_Death"]
margin_right = 285.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/Toggle_Death/HBoxContainer"]
margin_right = 64.0
margin_bottom = 32.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Temp_Level_Settings" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 405.0
margin_right = 285.0
margin_bottom = 619.0

[node name="Border_Warning" type="MarginContainer" parent="MarginContainer/VBoxContainer/Temp_Level_Settings"]
margin_right = 285.0
margin_bottom = 94.0
custom_constants/margin_bottom = 10

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Temp_Level_Settings/Border_Warning"]
margin_right = 285.0
margin_bottom = 84.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Change your border
to see level effect
changes properly!"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Temp_Level_Settings"]
margin_top = 94.0
margin_right = 285.0
margin_bottom = 120.0
text = "Time of day"

[node name="Time_Slider" type="MarginContainer" parent="MarginContainer/VBoxContainer/Temp_Level_Settings"]
margin_top = 120.0
margin_right = 285.0
margin_bottom = 156.0
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Temp_Level_Settings/Time_Slider"]
margin_right = 285.0
margin_bottom = 26.0

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Temp_Level_Settings/Time_Slider/HBoxContainer"]
margin_right = 211.0
margin_bottom = 26.0
focus_mode = 1
size_flags_horizontal = 11
size_flags_vertical = 3
custom_styles/slider = SubResource( 2 )
min_value = -1.0
max_value = 23.0
value = -1.0
scrollable = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Temp_Level_Settings/Time_Slider/HBoxContainer"]
margin_left = 211.0
margin_right = 285.0
margin_bottom = 26.0
text = "  NOW"

[node name="Rain_Toggle_Label" type="Label" parent="MarginContainer/VBoxContainer/Temp_Level_Settings"]
margin_top = 156.0
margin_right = 285.0
margin_bottom = 182.0
text = "Rainy weather"

[node name="Toggle_Rain" type="MarginContainer" parent="MarginContainer/VBoxContainer/Temp_Level_Settings"]
margin_top = 182.0
margin_right = 285.0
margin_bottom = 214.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Temp_Level_Settings/Toggle_Rain"]
margin_right = 285.0
margin_bottom = 32.0

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/Temp_Level_Settings/Toggle_Rain/HBoxContainer"]
margin_right = 64.0
margin_bottom = 32.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Weapon_Menu" type="PopupMenu" parent="MarginContainer"]
margin_left = 5.0
margin_right = 290.0
margin_bottom = 619.0
theme = ExtResource( 5 )

[connection signal="visibility_changed" from="." to="." method="_on_Debug_visibility_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Noclip/HBoxContainer/CheckButton" to="." method="_on_Noclip_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Show_Reticle/HBoxContainer/CheckButton" to="." method="_on_Show_Reticle_toggled"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3/Weapon1/TextureRect" to="." method="_on_TextureRect_gui_input" binds= [ 0 ]]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3/Weapon1/MenuButton" to="." method="_on_MenuButton_toggled" binds= [ 0 ]]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3/Weapon2/TextureRect" to="." method="_on_TextureRect_gui_input" binds= [ 1 ]]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Weapon_Select/HBoxContainer3/Weapon2/MenuButton" to="." method="_on_MenuButton_toggled" binds= [ 1 ]]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Toggle_Implants_Menu/Button" to="." method="_on_Select_Implants_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Player_Border/Border_Menu" to="." method="_on_Border_Menu_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Toggle_Death/HBoxContainer/CheckButton" to="." method="_on_Death_Toggle_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Temp_Level_Settings/Time_Slider/HBoxContainer/HSlider" to="." method="_on_Time_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Temp_Level_Settings/Toggle_Rain/HBoxContainer/CheckButton" to="." method="_on_Rain_toggled"]
[connection signal="popup_hide" from="MarginContainer/Weapon_Menu" to="." method="_on_Weapon_Menu_popup_hide"]
